src/test/ui/error-codes/E0034.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/E0034.rs:20:5
   |
LL |     Test::foo()
   |     ^^^^^^^^^ multiple `foo` found
   |
note: candidate #1 is defined in an impl of the trait `Trait1` for the type `Test`
  --> $DIR/E0034.rs:12:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^
   = help: to disambiguate the method call, write `Trait1::foo(...)` instead
note: candidate #2 is defined in an impl of the trait `Trait2` for the type `Test`
  --> $DIR/E0034.rs:16:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^
   = help: to disambiguate the method call, write `Trait2::foo(...)` instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
